yamls/k8s-controller/hnc-controller/hnc-controller-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: hnc-controller-manager
# namespace: hnc-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        control-plane: controller-manager
    spec:
      serviceAccountName: hnc-controller-sa
      imagePullSecrets:
      - name: registry-secret
      containers:
      - args:
        - --namespace=default
       #- --enable-hrq
        - --webhook-server-port=9443
        - --metrics-addr=:8080
        - --max-reconciles=10
        - --apiserver-qps-throttle=50
        - --excluded-namespace=kube-system
        - --excluded-namespace=kube-public
        - --excluded-namespace=kube-node-lease
        - --excluded-namespace=default
        - --excluded-namespace=monitoring
        - --excluded-namespace=logging
        - --enable-internal-cert-management
        - --cert-restart-on-secret-refresh
        #image: gcr.io/k8s-staging-multitenancy/hnc-manager:v1.0.0
        image: octahub.8lab.cn:5000/99/hnc-controller:v1.1
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 8081
          periodSeconds: 10
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 150Mi
        startupProbe:
          failureThreshold: 100
          httpGet:
            path: /readyz
            port: 8081
          periodSeconds: 5
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: hnc-webhook-server-cert
