yamls/k8s-controller/hnc-controller/hnc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    control-plane: controller-manager
  name: hnc-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  name: hnc-webhook-service
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
